--- a/index.html
+++ b/index.html
@@ -1,47 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Handlebars Store</title>
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/main.css">
+  <meta charset="utf-8">
+  <title>Client Boilerplate 20140519</title>
+  <link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
 <body>
-	<div class="row">
+	<h1>Client Boilerplate 20140519</h1>
+	<h2>jQuery v1.11.1</h2>
+	<h2>Handlebars v1.3.0</h2>
+	<h2>Bootstrap v3.1.1</h2>
 	
-		<div id="product-container" class="col-xs-12 col-sm-6 col-md-8">
-			<h1>Handlebars Store</h1>
-			<div class="new-products">
-			</div>
-		</div>
+  <script src="./js/jquery-1.11.1.min.js"></script>
+  <script src="./js/handlebars-v1.3.0.js"></script>
+  <script src="./js/bootstrap.min.js"></script>
+  <script src="./js/main.js"></script>
 
-		<div id="second-product-container" class="col-xs-6 col-lg-4">
-			<ul id="wishlist">
-			</ul>
-		</div>
-
-	</div>
-
-	<div class="row">
-	</div>
-
-	<script id="product-template" type="text/x-handlebars-template">
-		<div class="product">
-			<h2>{{title}}</h2>
-			<img class="product-image" src={{image}}><br>
-			<button type="button" class="btn btn-success purchase">Add to cart &#36;{{cost}}</button></br>
-			<br>
-		</div>	
-	</script>
-
-	<script id="wishlist-template" type="text/x-handlebars-template">
-	<li><button type="button" class="btn btn-success wishlist">Add {{title}} to Wishlist</li>
-	</script>
-
-	<script src="./js/jquery-1.11.1.min.js"></script>
-	<script src="./js/handlebars-v1.3.0.js"></script>
-	<script src="./js/bootstrap.min.js"></script>
-	<script src="./js/products-data.js"></script>
-	<script src="./js/main.js"></script>
 </body>
 </html>
